--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-dotenv": "^0.1.3",
+        "react-hook-form": "^7.45.4",
         "react-router-dom": "^6.15.0",
         "react-spinners": "^0.13.8",
         "react-toastify": "^9.1.3",
