--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-dom": "^18.2.0",
         "react-dotenv": "^0.1.3",
         "react-hook-form": "7.43",
+        "react-loading-skeleton": "^3.3.1",
         "react-router-dom": "^6.15.0",
         "react-spinners": "^0.13.8",
         "react-toastify": "^9.1.3",
